syntax = "proto3";

package auth;

option go_package = "/authpb;authpb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc LoginWithEmailAndPassword(EPLoginRequest) returns (EPLoginResponse);
  rpc LoginWithGoogle(GLoginRequest) returns (GLoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  repeated string addresses = 4;
}

message RegisterResponse {
  string user_id = 1;
  EPLoginResponse tokens = 2;
}

message EPLoginRequest {
  string email = 1;
  string password = 2;
}

message EPLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GLoginRequest {
  string google_token = 1;
}

message GLoginResponse {
  string username = 1;
  string email = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  string message = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}
